--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,16 @@ body
   font-family: sans-serif;
 }
 
+h3{
+  color: red;
+  margin-left: 50%;
+}
+
+h1{
+  color: red;
+  margin-left: 20%;
+}
+
 .container
 {
   align-items: center;
